<?xml version="1.0"?>
<package format="2">
  <name>point_processing</name>
  <version>1.0.0</version>
  <description>The point_processing package</description>

  <maintainer email="ivddorrka@gmail.com">ivddorrka</maintainer>
  <license>MIT</license>


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>message_filters</build_depend> -->
  
  <exec_depend>message_runtime</exec_depend>
  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>